--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+#env files
+app/environments/environment.ts
+app/environments/environment.prod.ts
+
