--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ yarn-error.log
 
 # IDEs and editors
 .idea/
+.angular
 .project
 .classpath
 .c9/
@@ -21,11 +22,7 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 .history/*
 
 # Miscellaneous
