--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@rxjs/rx": "^4.1.0",
+    "cors": "^2.8.5",
     "firebase": "^9.7.0",
+    "ngx-socket-io": "^4.2.0",
     "rxjs": "~7.5.0",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -37,5 +42,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6"
   }
 }
