--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -19,8 +20,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@nebular/eva-icons": "^9.0.2",
+    "@nebular/theme": "^9.0.2",
     "@rxjs/rx": "^4.1.0",
     "cors": "^2.8.5",
+    "eva-icons": "^1.1.3",
     "firebase": "^9.7.0",
     "ngx-socket-io": "^4.2.0",
     "rxjs": "~7.5.0",
@@ -33,6 +37,7 @@
     "@angular-devkit/build-angular": "~13.3.4",
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.0",
+    "@schematics/angular": "~13.3.4",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
