--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
     "@nebular/eva-icons": "^9.0.2",
     "@nebular/theme": "^9.0.2",
     "@rxjs/rx": "^4.1.0",
+    "base64-js": "^1.5.1",
+    "blob-util": "^2.0.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "eva-icons": "^1.1.3",
     "firebase": "^9.7.0",
+    "image-js": "^0.34.1",
     "ngx-socket-io": "^4.2.0",
     "rxjs": "~7.5.0",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
+    "steganography.ts": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -38,6 +43,7 @@
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.0",
     "@schematics/angular": "~13.3.4",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
