--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@nebular/eva-icons": "^9.0.2",
     "@nebular/theme": "^9.0.2",
     "@rxjs/rx": "^4.1.0",
+    "base-64": "^1.0.0",
     "base64-js": "^1.5.1",
     "blob-util": "^2.0.2",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "eva-icons": "^1.1.3",
+    "fast-png": "^6.1.0",
     "firebase": "^9.7.0",
     "image-js": "^0.34.1",
     "ngx-socket-io": "^4.2.0",
